--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="fonts/font-awesome-4.0.3/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -13,18 +14,23 @@
             <div class="header-social">
                 <a href="#">
                     <div class="bg-facebook_icon"></div>
+                    <i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
                 </a>
                 <a href="#">
                     <div class="bg-twitter_icon"></div>
+                    <i class="fa fa-twitter fa-4x" aria-hidden="true"></i>
                 </a>
                 <a href="#">
                     <div class="bg-youtube_icon"></div>
+                    <i class="fa fa-youtube fa-4x" aria-hidden="true"></i>
                 </a>
                 <a href="#">
                     <div class="bg-pinterest_icon"></div>
+                    <i class="fa fa-pinterest fa-4x" aria-hidden="true"></i>
                 </a>
                 <a href="#">
                     <div class="bg-insta_icon"></div>
+                    <i class="fa fa-instagram fa-4x" aria-hidden="true"></i>
                 </a>
                 <select>
                     <option selected>EN</option>
@@ -167,8 +173,13 @@
                     <div class="products-title">
                         <h3>New products</h3>
                         <div>
-                            <button class="bg-arrow_right"></button>
-                            <button class="bg-arrow_right"></button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-left fa-5x" aria-hidden="true"></i>
+                            </button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-right fa-5x" aria-hidden="true"></i>
+                            </button>
+
                         </div>
                     </div>
                     <div class="product-body">
@@ -247,8 +258,13 @@
                     <div class="products-title">
                         <h3>Top products</h3>
                         <div>
-                            <button class="bg-arrow_right"></button>
-                            <button class="bg-arrow_right"></button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-left fa-5x" aria-hidden="true"></i>
+                            </button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-right fa-5x" aria-hidden="true"></i>
+                            </button>
+
                         </div>
                     </div>
                     <div class="product-body">
@@ -292,8 +308,13 @@
                     <div class="products-title">
                         <h3>Sale products</h3>
                         <div>
-                            <button class="bg-arrow_right"></button>
-                            <button class="bg-arrow_right"></button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-left fa-5x" aria-hidden="true"></i>
+                            </button>
+                            <button class="bg-arrow_right">
+                                <i class="fa fa-angle-right fa-5x" aria-hidden="true"></i>
+                            </button>
+
                         </div>
                     </div>
                     <div class="product-body">
